test/vm/errors/parser/bad_type_invalid.ach
// Parser error: completely invalid type name
// Expected: error listing valid types (Field, Bool, Field[N], Bool[N])

public value: int
